[project]
name = "steerer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "piccolo[postgres]",
    "pydantic",
]

[dependency-groups]
dev = [
    "httpx2",
    "mypy",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steerer"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_return_any = true
exclude = ["^tests/"]
plugins = ["pydantic.mypy"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
